{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 14,
  "lineage": "61a4e42c-f8bc-d463-10c5-a2bfeb3f9c67",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "my-key-pair",
            "arn": "arn:aws:ec2:us-east-1::instance/i-479ed6d8a5612d308",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-479ed6d8a5612d308",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-9d3520d5",
            "private_dns": "ip-10-0-1-4.ec2.internal",
            "private_ip": "10.0.1.4",
            "public_dns": "ec2-54-214-86-182.compute-1.amazonaws.com",
            "public_ip": "54.214.86.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-1556755e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-2c8c19a268e26d623"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7d3d01a4",
            "tags": {
              "Name": "WebServer"
            },
            "tags_all": {
              "Name": "WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          },
          "dependencies": [
            "module.security_group.aws_security_group.webserver_sg",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:internet-gateway/igw-4496b428",
            "id": "igw-4496b428",
            "owner_id": "000000000000",
            "tags": {
              "Name": "MeuInternetGateway"
            },
            "tags_all": {
              "Name": "MeuInternetGateway"
            },
            "vpc_id": "vpc-b2863d16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-e74810f2",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-e74810f2",
            "domain": "vpc",
            "id": "eipalloc-e74810f2",
            "public_dns": "ec2-127-73-180-54.compute-1.amazonaws.com",
            "public_ip": "127.73.180.54",
            "tags": {
              "Name": "NATGatewayEIP"
            },
            "tags_all": {
              "Name": "NATGatewayEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-e74810f2",
            "association_id": "eipassoc-641fc709",
            "connectivity_type": "public",
            "id": "nat-3c9b155df941c18b4",
            "network_interface_id": "eni-6312a903",
            "private_ip": "10.88.9.187",
            "public_ip": "127.73.180.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-7d3d01a4",
            "tags": {
              "Name": "NATGateway"
            },
            "tags_all": {
              "Name": "NATGateway"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_gateway_ip",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-4cea77c5",
            "id": "rtb-4cea77c5",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-3c9b155df941c18b4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTablePrivada"
            },
            "tags_all": {
              "Name": "RouteTablePrivada"
            },
            "timeouts": null,
            "vpc_id": "vpc-b2863d16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_gateway_ip",
            "module.nat_gateway.aws_nat_gateway.my_nat_gateway",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:route-table/rtb-a82a195d",
            "id": "rtb-a82a195d",
            "owner_id": "000000000000",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-4496b428",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RouteTablePublica"
            },
            "tags_all": {
              "Name": "RouteTablePublica"
            },
            "timeouts": null,
            "vpc_id": "vpc-b2863d16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-be5b442c",
            "route_table_id": "rtb-4cea77c5",
            "subnet_id": "subnet-e7a78918"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.nat_gateway_ip",
            "module.nat_gateway.aws_nat_gateway.my_nat_gateway",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private_subnet",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-dd66e4be",
            "route_table_id": "rtb-a82a195d",
            "subnet_id": "subnet-7d3d01a4"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.my_igw",
            "module.route_table.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-2c8c19a268e26d623",
            "description": "Security group for webserver allowing HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-2c8c19a268e26d623",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-security-group",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebServerSG"
            },
            "tags_all": {
              "Name": "WebServerSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-b2863d16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:subnet/subnet-e7a78918",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-e7a78918",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MinhaPrivateSubnet"
            },
            "tags_all": {
              "Name": "MinhaPrivateSubnet"
            },
            "vpc_id": "vpc-b2863d16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000000000000:subnet/subnet-7d3d01a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-7d3d01a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000000000000",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MinhaPublicSubnet"
            },
            "tags_all": {
              "Name": "MinhaPublicSubnet"
            },
            "vpc_id": "vpc-b2863d16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.giropops_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "giropops_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:vpc/vpc-b2863d16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-3d7c2741",
            "default_route_table_id": "rtb-4f970a9b",
            "default_security_group_id": "sg-a09d730ff732d07c4",
            "dhcp_options_id": "default",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-b2863d16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-4f970a9b",
            "owner_id": "000000000000",
            "tags": {
              "Name": "MinhaVPC"
            },
            "tags_all": {
              "Name": "MinhaVPC"
            }
          }
        }
      ]
    }
  ]
}